# kas_final_grp3

./: .dockerignore  Dockerfile  README.md  db.sqlite3  go.mod  go.sum  index.html  main.go  manage.py  next.config.js  package.json  pom.xml  pyproject.toml  requirements.txt  vite.config.ts
app/: config.py  main.py
app/db/: database.py
app/models/: url.py
app/routers/: urls.py
internal/handler/: handler.go
internal/model/: note.go
internal/store/: store.go
jobboard/: settings.py  urls.py  wsgi.py
jobs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
jobs/management/commands/: seed_data.py
jobs/migrations/: 0001_initial.py
jobs/templates/jobs/: base.html  company_detail.html  company_list.html  job_detail.html  job_list.html
src/: App.tsx  server.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/recipes/: route.ts
src/app/recipes/[id]/: page.tsx
src/components/: CategoryChart.tsx  CategoryFilter.tsx  MonthlyChart.tsx  RecipeCard.tsx  SearchBar.tsx  SummaryCards.tsx  TransactionForm.tsx  TransactionList.tsx
src/hooks/: useTransactions.ts
src/lib/: recipes.ts
src/main/resources/: application.properties  data.sql
src/middleware/: upload.js
src/routes/: process.js
src/types/: index.ts
src/utils/: fileHelper.js
