[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener with click analytics"
authors = ["Dev <dev@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
